--- a/app/src/main/res/layout/simple_grid_model.xml
+++ b/app/src/main/res/layout/simple_grid_model.xml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="110dp"
-    android:layout_margin="10dp"
-    android:background="@drawable/rectagularbg">
+    android:layout_height="40dp">
 
     <TextView
         android:id="@+id/title_text"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
+        android:gravity="center_vertical"
+        android:paddingLeft="10dp"
         android:hint="TEXT"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/colorPrimary"
         android:textSize="16dp"
         android:textAllCaps="true" />
 
