--- a/app/src/main/res/layout/activity_hot_stories.xml
+++ b/app/src/main/res/layout/activity_hot_stories.xml
@@ -10,7 +10,7 @@
         android:id="@+id/hot_stories_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/wbg">
+        android:background="@drawable/background_gradient">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/top_bar"
