--- a/app/src/main/res/layout/category_item_option.xml
+++ b/app/src/main/res/layout/category_item_option.xml
@@ -1,34 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    card_view:contentPadding="10dp"
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp"
+    android:layout_marginTop="10dp"
+    card_view:cardElevation="5dp">
 
     <RelativeLayout
         android:id="@+id/category_layout"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="?attr/selectableItemBackground">
 
-        <ImageView
-            android:id="@+id/category_icon"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+        <RelativeLayout
+            android:id="@+id/category_image"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:src="@drawable/cat_technology" />
+            android:gravity="center_horizontal">
+
+            <ImageView
+                android:id="@+id/category_icon"
+                android:layout_width="56dp"
+                android:layout_height="56dp"
+                android:foregroundGravity="center_vertical"
+                android:src="@drawable/cat_technology" />
+
+        </RelativeLayout>
 
         <TextView
             android:id="@+id/category_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:layout_toEndOf="@+id/category_icon"
+            android:layout_below="@id/category_image"
+            android:gravity="center_horizontal"
             android:hint="Technology"
             android:textColor="@color/darkGray"
-            android:textSize="20dp"
+            android:textSize="16dp"
             android:textAllCaps="true" />
 
     </RelativeLayout>
 
-
-</RelativeLayout>
+</android.support.v7.widget.CardView>
