--- a/app/src/main/res/layout/stories_fragment_trending.xml
+++ b/app/src/main/res/layout/stories_fragment_trending.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:nestedScrollingEnabled="true">
 
     <RelativeLayout
         android:id="@+id/stories_top_header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="10dp"
-        android:layout_marginBottom="30dp">
+        android:layout_marginBottom="0dp">
 
         <TextView
             android:id="@+id/trending_title"
@@ -25,9 +27,9 @@
             android:layout_marginBottom="5dp"
             android:id="@+id/title_underline"
             android:layout_below="@id/trending_title"
-            android:layout_width="80dp"
+            android:layout_width="150dp"
             android:layout_height="5dp"
-            android:background="@color/colorPrimaryDark" />
+            android:background="@drawable/background_gradient" />
 
         <TextView
             android:id="@+id/trending_sub_title"
@@ -43,10 +45,9 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/stories_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_below="@id/stories_top_header">
 
     </android.support.v7.widget.RecyclerView>
-
 
 </RelativeLayout>
