--- a/app/src/main/res/layout/story_card_short_model.xml
+++ b/app/src/main/res/layout/story_card_short_model.xml
@@ -8,7 +8,7 @@
 
     <android.support.v7.widget.CardView
         android:id="@+id/story_card"
-        android:layout_width="160dp"
+        android:layout_width="150dp"
         android:layout_height="220dp"
         card_view:cardCornerRadius="10dp">
 
@@ -26,6 +26,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:src="@drawable/gradient" />
+
 
             <TextView
                 android:id="@+id/story_title"
@@ -51,6 +52,15 @@
                 android:paddingLeft="10dp"
                 android:paddingBottom="10dp"
                 android:paddingTop="5dp" />
+
+            <ImageView
+                android:id="@+id/share"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_share_black_24dp"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentBottom="true"
+                android:layout_margin="10dp" />
 
         </RelativeLayout>
 
