--- a/app/src/main/res/layout/topfeeds.xml
+++ b/app/src/main/res/layout/topfeeds.xml
@@ -25,7 +25,8 @@
         android:id="@+id/topfeeds_recyclerview"
         android:layout_below="@id/scores_recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginBottom="48dp">
 
     </android.support.v7.widget.RecyclerView>
 
