added list of list view

--- a/app/src/main/res/layout/activity_gather_info.xml
+++ b/app/src/main/res/layout/activity_gather_info.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.buggyarts.instafeedplus.GatherInfoActivity"
-    android:background="@drawable/background_gradient">
+    android:background="@android:color/holo_orange_dark">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
