--- a/app/src/main/res/layout/sample_dev_fragment.xml
+++ b/app/src/main/res/layout/sample_dev_fragment.xml
@@ -7,8 +7,7 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/scores_card_recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="48dp">
+        android:layout_height="wrap_content">
 
     </android.support.v7.widget.RecyclerView>
 
