--- a/app/src/main/res/layout/cric_mch_mini_model.xml
+++ b/app/src/main/res/layout/cric_mch_mini_model.xml
@@ -2,11 +2,11 @@
 <android.support.v7.widget.CardView android:id="@+id/match_card"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="320dp"
     android:layout_height="wrap_content"
     card_view:contentPadding="5dp"
     android:layout_marginLeft="10dp"
-    android:layout_marginRight="10dp"
+    android:layout_marginRight="5dp"
     android:layout_marginBottom="5dp"
     android:layout_marginTop="5dp">
 
