--- a/app/src/main/res/layout/stories_fragment_trending.xml
+++ b/app/src/main/res/layout/stories_fragment_trending.xml
@@ -6,6 +6,7 @@
     android:nestedScrollingEnabled="true">
 
     <RelativeLayout
+        android:visibility="gone"
         android:id="@+id/stories_top_header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
