--- a/app/src/main/res/drawable/rectagularbg.xml
+++ b/app/src/main/res/drawable/rectagularbg.xml
@@ -1,10 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <corners android:radius="8dp" />
-    <solid android:color="@color/colorPrimaryDark"></solid>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:state_pressed="true">
+        <shape xmlns:android="http://schemas.android.com/apk/res/android"
+            android:shape="rectangle">
+            <corners android:radius="8dp" />
+            <solid android:color="@color/colorPrimaryLight"/>
 
-    <!--<stroke-->
-    <!--android:width="2dp"-->
-    <!--android:color="@color/colorPrimaryDark"></stroke>-->
-</shape>
+            <!--<stroke-->
+            <!--android:width="2dp"-->
+            <!--android:color="@color/colorPrimaryDark"></stroke>-->
+        </shape>
+    </item>
+    <item>
+        <shape xmlns:android="http://schemas.android.com/apk/res/android"
+            android:shape="rectangle">
+            <corners android:radius="8dp" />
+            <solid android:color="@color/colorPrimaryDark"/>
+        </shape>
+    </item>
+</selector>
